--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 25 09:05:02 2018</p>
+         Last Run: Sun Nov 25 10:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -32,25 +32,25 @@
                         <td>12:00 PM</td>
                         <td>Clear</td>
                         <td>-3</td>
-                        <td>-6</td>
+                        <td>-3</td>
                         <td>0</td>
                         <td>71</td>
                         <td>1</td>
-                        <td>6</td>
+                        <td>5</td>
                         <td>SW</td>
-                        <td>21</td>
+                        <td>27</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Clear</td>
+                        <td>-2</td>
+                        <td>-4</td>
                         <td>0</td>
-                        <td>-3</td>
-                        <td>0</td>
-                        <td>64</td>
+                        <td>68</td>
                         <td>1</td>
-                        <td>8</td>
+                        <td>6</td>
                         <td>SSW</td>
-                        <td>17</td>
+                        <td>23</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -89,8 +89,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-6",
                  "-3",
+                 "-4",
                  "-2"
                ]
              },
@@ -102,7 +102,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-3",
-                 "0",
+                 "-2",
                  "1"
                ]
              }
@@ -172,7 +172,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "71",
-                 "64",
+                 "68",
                  "62"
                ]
              },
@@ -182,8 +182,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "21",
-                 "17",
+                 "27",
+                 "23",
                  "20"
                ]
              }
@@ -225,7 +225,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 25 09:05:02 2018</p>
+         Last Run: Sun Nov 25 10:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -250,11 +250,11 @@
                         <td>1</td>
                         <td>-2</td>
                         <td>5</td>
-                        <td>83</td>
+                        <td>82</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>SW</td>
-                        <td>94</td>
+                        <td>SSW</td>
+                        <td>90</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -262,11 +262,11 @@
                         <td>1</td>
                         <td>-2</td>
                         <td>6</td>
-                        <td>81</td>
+                        <td>80</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>92</td>
+                        <td>90</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -278,7 +278,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>91</td>
+                        <td>89</td>
                      </tr>
                   </tbody>
                </table>
@@ -387,8 +387,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "83",
-                 "81",
+                 "82",
+                 "80",
                  "82"
                ]
              },
@@ -398,9 +398,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "94",
-                 "92",
-                 "91"
+                 "90",
+                 "90",
+                 "89"
                ]
              }
            ]
@@ -440,7 +440,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 25 09:05:02 2018</p>
+         Last Run: Sun Nov 25 10:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -655,7 +655,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 25 09:05:02 2018</p>
+         Last Run: Sun Nov 25 10:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -677,8 +677,8 @@
                      <tr>
                         <td>01:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-3</td>
-                        <td>-6</td>
+                        <td>-2</td>
+                        <td>-5</td>
                         <td>4</td>
                         <td>68</td>
                         <td>1</td>
@@ -690,11 +690,11 @@
                         <td>02:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-2</td>
-                        <td>-6</td>
+                        <td>-5</td>
                         <td>3</td>
-                        <td>65</td>
+                        <td>64</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>NNW</td>
                         <td>43</td>
                      </tr>
@@ -703,11 +703,11 @@
                         <td>Partly Cloudy</td>
                         <td>-2</td>
                         <td>-5</td>
-                        <td>4</td>
+                        <td>3</td>
                         <td>64</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>NNW</td>
+                        <td>N</td>
                         <td>41</td>
                      </tr>
                   </tbody>
@@ -735,8 +735,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-6",
-                 "-6",
+                 "-5",
+                 "-5",
                  "-5"
                ]
              },
@@ -747,7 +747,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-3",
+                 "-2",
                  "-2",
                  "-2"
                ]
@@ -808,7 +808,7 @@
                "data":[
                  "4",
                  "3",
-                 "4"
+                 "3"
                ]
              },
              {
@@ -818,7 +818,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "68",
-                 "65",
+                 "64",
                  "64"
                ]
              },
