--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 25 10:05:02 2018</p>
+         Last Run: Sun Nov 25 11:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -32,13 +32,13 @@
                         <td>12:00 PM</td>
                         <td>Clear</td>
                         <td>-3</td>
-                        <td>-3</td>
+                        <td>-6</td>
                         <td>0</td>
-                        <td>71</td>
+                        <td>73</td>
                         <td>1</td>
-                        <td>5</td>
+                        <td>6</td>
                         <td>SW</td>
-                        <td>27</td>
+                        <td>19</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -46,23 +46,23 @@
                         <td>-2</td>
                         <td>-4</td>
                         <td>0</td>
-                        <td>68</td>
+                        <td>70</td>
                         <td>1</td>
                         <td>6</td>
                         <td>SSW</td>
-                        <td>23</td>
+                        <td>13</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Clear</td>
-                        <td>1</td>
+                        <td>0</td>
                         <td>-2</td>
                         <td>0</td>
-                        <td>62</td>
+                        <td>67</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>6</td>
                         <td>S</td>
-                        <td>20</td>
+                        <td>12</td>
                      </tr>
                   </tbody>
                </table>
@@ -89,7 +89,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-3",
+                 "-6",
                  "-4",
                  "-2"
                ]
@@ -103,7 +103,7 @@
                "data":[
                  "-3",
                  "-2",
-                 "1"
+                 "0"
                ]
              }
            ]
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "71",
-                 "68",
-                 "62"
+                 "73",
+                 "70",
+                 "67"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "27",
-                 "23",
-                 "20"
+                 "19",
+                 "13",
+                 "12"
                ]
              }
            ]
@@ -225,7 +225,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 25 10:05:02 2018</p>
+         Last Run: Sun Nov 25 11:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -249,12 +249,12 @@
                         <td>Overcast</td>
                         <td>1</td>
                         <td>-2</td>
-                        <td>5</td>
+                        <td>6</td>
                         <td>82</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>SSW</td>
-                        <td>90</td>
+                        <td>SW</td>
+                        <td>91</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -262,11 +262,11 @@
                         <td>1</td>
                         <td>-2</td>
                         <td>6</td>
-                        <td>80</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>90</td>
+                        <td>92</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -278,7 +278,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>89</td>
+                        <td>88</td>
                      </tr>
                   </tbody>
                </table>
@@ -376,7 +376,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "5",
+                 "6",
                  "6",
                  "6"
                ]
@@ -388,7 +388,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "82",
-                 "80",
+                 "81",
                  "82"
                ]
              },
@@ -398,9 +398,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "90",
-                 "90",
-                 "89"
+                 "91",
+                 "92",
+                 "88"
                ]
              }
            ]
@@ -440,7 +440,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 25 10:05:02 2018</p>
+         Last Run: Sun Nov 25 11:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -465,7 +465,7 @@
                         <td>-3</td>
                         <td>-6</td>
                         <td>5</td>
-                        <td>85</td>
+                        <td>83</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -477,10 +477,10 @@
                         <td>-4</td>
                         <td>-7</td>
                         <td>5</td>
-                        <td>87</td>
+                        <td>86</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>WSW</td>
+                        <td>W</td>
                         <td>37</td>
                      </tr>
                      <tr>
@@ -489,10 +489,10 @@
                         <td>-5</td>
                         <td>-9</td>
                         <td>5</td>
-                        <td>90</td>
+                        <td>89</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>WSW</td>
+                        <td>W</td>
                         <td>33</td>
                      </tr>
                   </tbody>
@@ -602,9 +602,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "85",
-                 "87",
-                 "90"
+                 "83",
+                 "86",
+                 "89"
                ]
              },
              {
@@ -655,7 +655,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 25 10:05:02 2018</p>
+         Last Run: Sun Nov 25 11:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -677,38 +677,38 @@
                      <tr>
                         <td>01:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-2</td>
-                        <td>-5</td>
+                        <td>-3</td>
+                        <td>-7</td>
                         <td>4</td>
-                        <td>68</td>
+                        <td>69</td>
                         <td>1</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>NNW</td>
-                        <td>45</td>
+                        <td>46</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-2</td>
-                        <td>-5</td>
-                        <td>3</td>
-                        <td>64</td>
+                        <td>-6</td>
+                        <td>4</td>
+                        <td>65</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>NNW</td>
-                        <td>43</td>
+                        <td>44</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-2</td>
                         <td>-5</td>
-                        <td>3</td>
-                        <td>64</td>
+                        <td>4</td>
+                        <td>65</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>N</td>
-                        <td>41</td>
+                        <td>NNW</td>
+                        <td>42</td>
                      </tr>
                   </tbody>
                </table>
@@ -735,8 +735,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-5",
-                 "-5",
+                 "-7",
+                 "-6",
                  "-5"
                ]
              },
@@ -747,7 +747,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-2",
+                 "-3",
                  "-2",
                  "-2"
                ]
@@ -807,8 +807,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "4",
-                 "3",
-                 "3"
+                 "4",
+                 "4"
                ]
              },
              {
@@ -817,9 +817,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "68",
-                 "64",
-                 "64"
+                 "69",
+                 "65",
+                 "65"
                ]
              },
              {
@@ -828,9 +828,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "45",
-                 "43",
-                 "41"
+                 "46",
+                 "44",
+                 "42"
                ]
              }
            ]
