--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 25 11:05:02 2018</p>
+         Last Run: Sun Nov 25 12:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -29,40 +29,28 @@
                   </thead>
                   <tbody>
                      <tr>
-                        <td>12:00 PM</td>
-                        <td>Clear</td>
-                        <td>-3</td>
-                        <td>-6</td>
-                        <td>0</td>
-                        <td>73</td>
-                        <td>1</td>
-                        <td>6</td>
-                        <td>SW</td>
-                        <td>19</td>
-                     </tr>
-                     <tr>
                         <td>01:00 PM</td>
                         <td>Clear</td>
-                        <td>-2</td>
-                        <td>-4</td>
                         <td>0</td>
-                        <td>70</td>
+                        <td>-2</td>
+                        <td>0</td>
+                        <td>64</td>
                         <td>1</td>
                         <td>6</td>
                         <td>SSW</td>
-                        <td>13</td>
+                        <td>17</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Clear</td>
+                        <td>1</td>
+                        <td>-1</td>
                         <td>0</td>
-                        <td>-2</td>
-                        <td>0</td>
-                        <td>67</td>
+                        <td>63</td>
                         <td>0</td>
                         <td>6</td>
                         <td>S</td>
-                        <td>12</td>
+                        <td>11</td>
                      </tr>
                   </tbody>
                </table>
@@ -77,7 +65,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator1").getContext("2d");
                   var data ={
            "labels":[
-             "12:00 PM",
              "01:00 PM",
              "02:00 PM"
            ],
@@ -89,9 +76,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-6",
-                 "-4",
-                 "-2"
+                 "-2",
+                 "-1"
                ]
              },
              {
@@ -101,9 +87,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-3",
-                 "-2",
-                 "0"
+                 "0",
+                 "1"
                ]
              }
            ]
@@ -149,7 +134,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator2").getContext("2d");
                   var data ={
            "labels":[
-             "12:00 PM",
              "01:00 PM",
              "02:00 PM"
            ],
@@ -161,7 +145,6 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "0",
-                 "0",
                  "0"
                ]
              },
@@ -171,9 +154,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "73",
-                 "70",
-                 "67"
+                 "64",
+                 "63"
                ]
              },
              {
@@ -182,9 +164,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "19",
-                 "13",
-                 "12"
+                 "17",
+                 "11"
                ]
              }
            ]
@@ -225,7 +206,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 25 11:05:02 2018</p>
+         Last Run: Sun Nov 25 12:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -249,34 +230,34 @@
                         <td>Overcast</td>
                         <td>1</td>
                         <td>-2</td>
-                        <td>6</td>
-                        <td>82</td>
+                        <td>5</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>SW</td>
-                        <td>91</td>
+                        <td>SSW</td>
+                        <td>88</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Overcast</td>
                         <td>1</td>
                         <td>-2</td>
-                        <td>6</td>
-                        <td>81</td>
+                        <td>5</td>
+                        <td>80</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>92</td>
+                        <td>89</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Overcast</td>
                         <td>1</td>
                         <td>-2</td>
-                        <td>6</td>
+                        <td>5</td>
                         <td>82</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>SW</td>
                         <td>88</td>
                      </tr>
@@ -376,9 +357,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "6",
-                 "6",
-                 "6"
+                 "5",
+                 "5",
+                 "5"
                ]
              },
              {
@@ -387,8 +368,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "82",
                  "81",
+                 "80",
                  "82"
                ]
              },
@@ -398,8 +379,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "91",
-                 "92",
+                 "88",
+                 "89",
                  "88"
                ]
              }
@@ -440,7 +421,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 25 11:05:02 2018</p>
+         Last Run: Sun Nov 25 12:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -461,7 +442,7 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>-3</td>
                         <td>-6</td>
                         <td>5</td>
@@ -469,11 +450,11 @@
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>40</td>
+                        <td>11</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>-4</td>
                         <td>-7</td>
                         <td>5</td>
@@ -481,11 +462,11 @@
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>37</td>
+                        <td>11</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>-5</td>
                         <td>-9</td>
                         <td>5</td>
@@ -493,7 +474,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>33</td>
+                        <td>10</td>
                      </tr>
                   </tbody>
                </table>
@@ -613,9 +594,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "40",
-                 "37",
-                 "33"
+                 "11",
+                 "11",
+                 "10"
                ]
              }
            ]
@@ -655,7 +636,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 25 11:05:02 2018</p>
+         Last Run: Sun Nov 25 12:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -678,37 +659,37 @@
                         <td>01:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-3</td>
-                        <td>-7</td>
-                        <td>4</td>
-                        <td>69</td>
+                        <td>-6</td>
+                        <td>3</td>
+                        <td>67</td>
                         <td>1</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>NNW</td>
-                        <td>46</td>
+                        <td>31</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>-2</td>
-                        <td>-6</td>
-                        <td>4</td>
-                        <td>65</td>
-                        <td>0</td>
-                        <td>10</td>
-                        <td>NNW</td>
-                        <td>44</td>
-                     </tr>
-                     <tr>
-                        <td>03:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>-2</td>
                         <td>-5</td>
-                        <td>4</td>
-                        <td>65</td>
+                        <td>3</td>
+                        <td>63</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NNW</td>
-                        <td>42</td>
+                        <td>28</td>
+                     </tr>
+                     <tr>
+                        <td>03:00 PM</td>
+                        <td>Clear</td>
+                        <td>-2</td>
+                        <td>-5</td>
+                        <td>3</td>
+                        <td>63</td>
+                        <td>0</td>
+                        <td>8</td>
+                        <td>N</td>
+                        <td>25</td>
                      </tr>
                   </tbody>
                </table>
@@ -735,8 +716,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-7",
                  "-6",
+                 "-5",
                  "-5"
                ]
              },
@@ -806,9 +787,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "4",
-                 "4",
-                 "4"
+                 "3",
+                 "3",
+                 "3"
                ]
              },
              {
@@ -817,9 +798,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "69",
-                 "65",
-                 "65"
+                 "67",
+                 "63",
+                 "63"
                ]
              },
              {
@@ -828,9 +809,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "46",
-                 "44",
-                 "42"
+                 "31",
+                 "28",
+                 "25"
                ]
              }
            ]
